fixed alignment and padding

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,7 +43,13 @@
     margin: 2px 0;
  }
 
- 
+ .panel {
+ 	margin-bottom: 0;
+ }
+
+ .ng-scope {
+ 	display: inline;
+ }
 
 
 
